--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/reporte-semanal/reporte-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/reporte-semanal/reporte-semanal.component.html
@@ -333,9 +333,9 @@
     </tbody>
   </table>
   <table>
-    <tbody>
+    <tbody class="text-left border-none-td">
       <tr>
-        <td colspan="12" class="bg-gray p-table font-weight-bold">4. GESTION AMBIENTAL</td>
+        <td colspan="12" class="bg-gray p-table font-weight-bold border-1 text-center">4. GESTION AMBIENTAL</td>
       </tr>
       <tr>
         <td>
@@ -620,7 +620,7 @@
       </tr>
       <tr>
         <td>
-          Los materiales de construcción se encontraron protegidos y demarcados correctamente:											
+          Los materiales de construcción se encontraron protegidos y demarcados correctamente:
         </td>
         <td>
           SI
@@ -639,6 +639,202 @@
         </td>
         <td>
           URL para registro fotográfico
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <table>
+    <tbody class="text-left border-none-td">
+      <tr>
+        <td colspan="5" class="bg-gray p-table font-weight-bold border-1 text-center">5. GESTION CALIDAD</td>
+      </tr>
+      <tr>
+        <td>
+          Control de Inspeccion de Ensayos:
+        </td>
+        <td colspan="4">
+          ________________________________________________________________________________________________________________________________________________
+        </td>
+      </tr>
+      <tr>
+        <td colspan="5">
+          ________________________________________________________________________________________________________________________________________________
+        </td>
+      </tr>
+      <tr>
+        <td colspan="5">
+          ________________________________________________________________________________________________________________________________________________
+        </td>
+      </tr>
+      <tr>
+        <td colspan="5">
+          ________________________________________________________________________________________________________________________________________________
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+          Control de Equipos de Medición
+        </td>
+        <td colspan="4">
+          _____________________________________________________________________________________________________________
+        </td>
+      </tr>
+      <tr>
+        <td colspan="5">
+          _____________________________________________________________________________________________________________
+        </td>
+      </tr>
+      <tr>
+        <td colspan="5">
+          _____________________________________________________________________________________________________________
+        </td>
+      </tr>
+      <tr>
+        <td colspan="5">
+          _____________________________________________________________________________________________________________
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <table>
+    <tbody class="text-left border-none-td">
+      <tr>
+        <td colspan="12" class="bg-gray p-table font-weight-bold border-1 text-center">6. GESTION DE SEGURIDAD Y SALUD EN EL TRABAJO</td>
+      </tr>
+      <tr>
+      <tr>
+        <td>
+          Número de personas laborando en la obra durante la semana
+        </td>
+        <td>
+          _____________________________
+        </td>
+      </tr>
+      <tr>
+        <td>
+          
+        </td>
+        <td>
+          ¿Todos los trabajadores se encuentran afiliados al sistema de seguridad social y están al día en el pago de
+          sus honorarios
+        </td>
+        <td>
+          SI
+        </td>
+        <td>
+          _________
+        </td>
+        <td>
+          NO
+        </td>
+        <td>
+          _________
+        </td>
+        <td>
+          Observaciones
+        </td>
+        <td>
+          URL para evidencia
+        </td>
+      </tr>
+      <tr>
+        <td>
+          
+        </td>
+        <td>
+          Cantidad de accidentes laborales registrados en la semana
+        </td>
+        <td>
+          ___________________________
+        </td>
+      </tr>
+      <tr>
+        <td>
+          
+        </td>
+        <td>
+          Principales causas de los accidentes o incidentes laborales ocurridos durante la semana									
+        </td>
+        <td>
+          (Opciones de respuesta: falta o uso inadecuado de EPP; falta o señalización inadecuada; exceso de confianza;
+          actos inseguros y mal uso de las herramientas; desorden en el lugar de trabajo; caída de objetos; otros
+        </td>
+        <td>
+          _________
+        </td>
+        <td>
+          URL para relacionar informe de la investigación y evidencia
+        </td>
+      </tr>
+      <tr>
+        <td>
+          ¿Se realizaron capacitaciones relacionadas con seguridad y salud en el trabajo durante la semana?
+        </td>
+        <td>
+          SI
+        </td>
+        <td>
+          _________
+        </td>
+        <td>
+          Tema de la capacitación
+        </td>
+        <td>
+          _________
+        </td>
+        <td>
+          NO
+        </td>
+        <td>
+          _________
+        </td>
+        <td>
+          Observaciones
+        </td>
+        <td>
+          URL para evidencia
+        </td>
+      </tr>
+      <tr>
+        <td>
+          ¿Se realizaron inspecciones del estado y uso adecuado de elementos de protección personal, maquinaria,
+          equipos y herramientas durante la semana?
+        </td>
+        <td>
+          SI
+        </td>
+        <td>
+          _________
+        </td>
+        <td>
+          NO
+        </td>
+        <td>
+          _________
+        </td>
+        <td>
+          Observaciones
+        </td>
+        <td>
+          URL para registro fotográfico
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Resultado de las inspecciones
+        </td>
+        <td>
+          Cumple
+        </td>
+        <td>
+          _________
+        </td>
+        <td>
+          No cumple
+        </td>
+        <td>
+          _________
         </td>
       </tr>
     </tbody>
