--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/reporte-semanal/reporte-semanal.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/reporte-semanal/reporte-semanal.component.scss
@@ -9,9 +9,10 @@ td {
 }
 
 p-table {
-  padding: .6em .4em;
+  padding: 0.6em 0.4em;
 }
 
+strong,
 .font-weight-bold {
   font-weight: 700;
 }
@@ -33,15 +34,14 @@ p-table {
   line-height: 1.2;
 }
 
-
-.adjustTemplate{
-    max-width: 1500px;
-    width: 100%;
-    // height: 600px;
-    position: relative;
-    overflow-x: auto;
-    margin-left: auto;
-    margin-right: auto;
+.adjustTemplate {
+  max-width: 1500px;
+  width: 100%;
+  // height: 600px;
+  position: relative;
+  overflow-x: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .border-none-td td {
@@ -50,6 +50,32 @@ p-table {
 
 .border-1 {
   border: solid 1px #000 !important;
+}
+
+.border-bottom-1 {
+  border-bottom: solid 1px #000 !important;
+}
+
+.w-50 {
+  width: 50%;
+}
+
+td {
+  vertical-align: top;
+  padding-left: 0.2em;
+  padding-right: 0.2em;
+}
+
+.p-0 {
+  padding: 0;
+}
+
+.height-column-2 {
+  height: 46px
+}
+
+.vertical-align-bottom {
+  vertical-align: bottom
 }
 
 /* tr {
