--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/dialog-observaciones/dialog-observaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/dialog-observaciones/dialog-observaciones.component.html
@@ -1,44 +1,45 @@
-<section class="text-center">
+<section class="text-center" *ngIf="data != null">
   <button mat-button mat-dialog-close class="modal--btn-cerrar" [mat-dialog-close]="true">
     <img src="assets/img/icon/cerrar-blanco.svg" alt="cerrar">
   </button>
 
   <h1 class="title-menu--h1">
-    Observaciones flujo de inversión de recursos
+    Observaciones <span *ngIf="!data.esObra">flujo de inversión de recursos</span><span *ngIf="data.esObra">Programación</span>
   </h1>
 
   <section class="flex-center mt-05em">
     <span>
       <strong>
-        10/08/2020
+        {{ data.dataFile.fechaCreacion | date: 'dd/MM/yyyy' }}
       </strong>
     </span>
-    <span>
+    <span class="info-text" [class.sin-diligenciar]="data.dataFile.estadoCargue === 'Fallido'"
+    [class.completo]="data.dataFile.estadoCargue === 'Valido'">
       <strong>
-        Valido
+        {{data.dataFile.estadoCargue}}
       </strong>
     </span>
   </section>
 
-  <form autocomplete="off" [formGroup]="formObservacion" (ngSubmit)="guardar()">
+  <form autocomplete="off" [formGroup]="observaciones" (ngSubmit)="guardar()">
 
     <div class="d-flex align-items-center mt-1em">
       <div class="text-area-quill">
         <quill-editor class="quill-editor-style" [modules]="config"
-          (onContentChanged)="maxLength($event, 3000)" formControlName="causaRechazo" required>
+          (onContentChanged)="maxLength($event, 3000)" formControlName="observaciones" required>
         </quill-editor>
       </div>
-      <span class="contador miles" *ngIf="formObservacion.get('causaRechazo').value !== null">
-        {{3000 - (textoLimpio(formObservacion.get('causaRechazo').value)>3000?3000:textoLimpio(formObservacion.get('causaRechazo').value))}}
+      <span class="contador miles" *ngIf="observaciones.get('observaciones').value !== null">
+        {{3000 - (textoLimpio(observaciones.get('observaciones').value)>3000?3000:textoLimpio(observaciones.get('observaciones').value))}}
       </span>
-      <span class="contador miles" *ngIf="formObservacion.get('causaRechazo').value === null">
+      <span class="contador miles" *ngIf="observaciones.get('observaciones').value === null">
         3000
       </span>
     </div>
 
     <div class="text-center">
       <button mat-button color="warn" class="btn-guardar" type="submit"
-      [disabled]="formObservacion.get('causaRechazo').invalid && formObservacion.get('causaRechazo').touched">
+      [disabled]="(observaciones.get('observaciones').invalid && observaciones.get('observaciones').touched) || observaciones.get('observaciones').value == '' ||  observaciones.get('observaciones').value == null">
         <img src="assets/img/icon/guardar.svg">
       </button>
     </div>
