--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/flujo-intervencion-recursos/flujo-intervencion-recursos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/flujo-intervencion-recursos/flujo-intervencion-recursos.component.html
@@ -23,7 +23,7 @@
   </button>
 </div>
 
-<section class="text-center">
+<section class="text-center" *ngIf="this.dataSource.data.length > 0">
   <div class="busqueda">
     <mat-form-field appearance="outline" class="busqueda--input">
       <mat-label>Buscador / Filtro</mat-label>
@@ -38,35 +38,35 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <!-- fechaCargue Column -->
-      <ng-container matColumnDef="fechaCargue">
+      <ng-container matColumnDef="fechaCreacion">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           Fecha de cargue
         </th>
-        <td mat-cell *matCellDef="let element"><b>{{element.fechaCargue}}</b></td>
+        <td mat-cell *matCellDef="let element"><b>{{element.fechaCreacion}}</b></td>
       </ng-container>
 
       <!-- numeroToalRegistros Column -->
-      <ng-container matColumnDef="numeroToalRegistros">
+      <ng-container matColumnDef="cantidadRegistros">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           Número total de registros
         </th>
-        <td mat-cell *matCellDef="let element">{{element.numeroToalRegistros}}</td>
+        <td mat-cell *matCellDef="let element">{{element.cantidadRegistros}}</td>
       </ng-container>
 
       <!-- numeroRegistrosValidos Column -->
-      <ng-container matColumnDef="numeroRegistrosValidos">
+      <ng-container matColumnDef="cantidadRegistrosValidos">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           Número de registros validos
         </th>
-        <td mat-cell *matCellDef="let element">{{element.numeroRegistrosValidos}}</td>
+        <td mat-cell *matCellDef="let element">{{element.cantidadRegistrosValidos}}</td>
       </ng-container>
 
       <!-- numeroRegistrosInalidos Column -->
-      <ng-container matColumnDef="numeroRegistrosInalidos">
+      <ng-container matColumnDef="cantidadRegistrosInvalidos">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           Número de registros inválidos
         </th>
-        <td mat-cell *matCellDef="let element">{{element.numeroRegistrosInalidos}}</td>
+        <td mat-cell *matCellDef="let element">{{element.cantidadRegistrosInvalidos}}</td>
       </ng-container>
 
       <!-- estadoCargue Column -->
